[project]
name = "trading"
dynamic = ["version"]
description = ""
authors = [
    {name = "Ivin Lee",email = "rdrf.myfoot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.20.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.0.0"
packages = [
    {include = "trading", from = "src/python"}
    ]

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "*"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
mypy = "*"
isort = "*"
black = "*"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[tool.black]
line-length = 120